[gd_scene load_steps=10 format=3 uid="uid://dnv7wug6gtchg"]

[ext_resource type="Script" path="res://Scripts/UI/main_menu.gd" id="1_y3b8d"]
[ext_resource type="Theme" uid="uid://guaqrfny00d3" path="res://Assets/Themes/ui_theme.tres" id="2_vl0x8"]
[ext_resource type="VideoStream" path="res://Assets/Videos/Menu_Background1.ogv" id="2_yqcbg"]
[ext_resource type="PackedScene" uid="uid://dnxmef5rt333h" path="res://Prefabs/UI/audio_sliders.tscn" id="3_0v46y"]
[ext_resource type="Shader" path="res://Assets/Shaders/blur.gdshader" id="3_ap54u"]
[ext_resource type="PackedScene" uid="uid://b7ebcew0fme12" path="res://Prefabs/UI/slime_amount_selector.tscn" id="3_vrrq8"]
[ext_resource type="PackedScene" uid="uid://7n2ofqo0tfhx" path="res://Prefabs/UI/extras_bar.tscn" id="4_46d6x"]
[ext_resource type="PackedScene" uid="uid://bb8bkdkxam8c0" path="res://Prefabs/UI/title.tscn" id="6_vfph8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_unhmg"]
shader = ExtResource("3_ap54u")
shader_parameter/lod = 2.0

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3b8d")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
modulate = Color(0.929412, 0.929412, 0.929412, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_yqcbg")
autoplay = true
expand = true
loop = true

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_unhmg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="MenuContent" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 512
theme_override_constants/margin_right = 512
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContent/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_vl0x8")
theme_override_constants/separation = 32
alignment = 1

[node name="Title" parent="MenuContent/MarginContainer/VBoxContainer" instance=ExtResource("6_vfph8")]
layout_mode = 2
expand_mode = 5

[node name="PlayButton" type="Button" parent="MenuContent/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Play"

[node name="SettingsButton" type="Button" parent="MenuContent/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="SlimeAmountSelector" parent="MenuContent/MarginContainer/VBoxContainer" instance=ExtResource("3_vrrq8")]
layout_mode = 2

[node name="AudioSliders" parent="MenuContent/MarginContainer/VBoxContainer" instance=ExtResource("3_0v46y")]
layout_mode = 2

[node name="ExitButton" type="Button" parent="MenuContent/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"

[node name="ExtrasBar" parent="MenuContent" instance=ExtResource("4_46d6x")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_right = 960.0
size_flags_vertical = 8

[connection signal="pressed" from="MenuContent/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuContent/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContent/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
